# agents-avoid-collapse-2361-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: finetune_ecosystem.jsonl  paper_writer_prompt.txt  rag_data_segment_n4.jsonl  rag_model_family.jsonl  rag_model_family_n4.jsonl  rag_persona_n4.jsonl  rag_single_n4.jsonl  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_search_results/: model_collapse_LLM_training_synthetic_generated_data_recursive_20260428_051937.jsonl
papers/: README.md  arxiv_search_extra.json  arxiv_search_initial.json  arxiv_search_more.json  arxiv_search_targeted.json  paper_finder_resolved.json  paper_finder_results.json
results/: _sections.md  axis_compare.json  axis_slopes.csv  axis_summary.csv  finetune_ecosystem.json  finetune_summary.csv  mvp_estimates.json  rag_data_segment_n4.json  rag_model_family.json  rag_model_family_n4.json  rag_model_family_summary.csv  rag_persona_n4.json  rag_single_n4.json  slopes_finetune_summary_distinct_2.csv  slopes_finetune_summary_hsd.csv  slopes_finetune_summary_mean_pairwise_dist.csv  slopes_finetune_summary_mean_perplexity.csv  slopes_rag_model_family_summary_distinct_2.csv  slopes_rag_model_family_summary_frobenius.csv  slopes_rag_model_family_summary_hsd.csv  slopes_rag_model_family_summary_mean_pairwise_dist.csv  stats_summary.json
(+30 files in other folders)
