[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments on LLM ecosystem collapse"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "arxiv>=3.0.0",
    "datasets>=4.8.5",
    "httpx>=0.28.1",
    "matplotlib>=3.10.9",
    "openai>=2.32.0",
    "pandas>=2.3.3",
    "pypdf>=6.10.2",
    "requests>=2.33.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.4.1",
    "tabulate>=0.10.0",
    "torch>=2.11.0",
    "transformers>=5.6.2",
]
